--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 
 <!-- Custom CSS -->
 <link href="css/style.css" rel='stylesheet' type='text/css' />
+<link href="css/createprofileform.css" rel='stylesheet' type='text/css' />
 
 <!-- font-awesome icons CSS -->
 <link href="css/font-awesome.css" rel="stylesheet"> 
@@ -37,6 +38,8 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 
 <!--webfonts-->
 <link href="//fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
+<link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+<link href="//fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
 <!--//webfonts--> 
 
 <!-- Metis Menu -->
@@ -44,7 +47,6 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 <script src="js/custom.js"></script>
 <link href="css/custom.css" rel="stylesheet">
 <!--//Metis Menu -->
-
 </head> 
 <body class="cbp-spmenu-push">
     <noscript>
@@ -101,6 +103,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 	
 	<!-- Bootstrap Core JavaScript -->
    <script src="js/bootstrap.js"> </script>
-   
+   <link rel="stylesheet" href="css/pikaday.css" />
+   <script src="js/pikaday.js"></script>
 </body>
 </html>
