Redirect Login Route to CreateProfile Route if no name on firebase user but to Dashboard Route if name on user

--- a/public/index.html
+++ b/public/index.html
@@ -104,6 +104,6 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 	<!-- Bootstrap Core JavaScript -->
    <script src="js/bootstrap.js"> </script>
    <link rel="stylesheet" href="css/pikaday.css" />
-   <script src="js/pikaday.js"></script>
+   <!-- <script src="js/pikaday.js"></script> -->
 </body>
 </html>
