--- a/public/index.html
+++ b/public/index.html
@@ -74,30 +74,8 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
     </script> -->
 	<!-- //side nav js -->
 	
-	<!-- Classie --><!-- for toggle left push menu script -->
-		<script src="js/classie.js"></script>
-		<!-- <script>
-			var menuLeft = document.getElementById( 'cbp-spmenu-s1' ),
-				showLeftPush = document.getElementById( 'showLeftPush' ),
-				body = document.body;
-				
-			showLeftPush.onclick = function() {
-				classie.toggle( this, 'active' );
-				classie.toggle( body, 'cbp-spmenu-push-toright' );
-				classie.toggle( menuLeft, 'cbp-spmenu-open' );
-				disableOther( 'showLeftPush' );
-			};
-			
-			function disableOther( button ) {
-				if( button !== 'showLeftPush' ) {
-					classie.toggle( showLeftPush, 'disabled' );
-				}
-			}
-		</script> -->
-	<!-- //Classie --><!-- //for toggle left push menu script -->
-	
 	<!--scrolling js-->
-	<script src="js/jquery.nicescroll.js"></script>
+	<!-- <script src="js/jquery.nicescroll.js"></script> -->
 	<script src="js/scripts.js"></script>
 	<!--//scrolling js-->
 	
