--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
     <div id="root"></div>
 	</div>
 	
+	<script src="js/paystack-inline.js"></script>
 	<!-- side nav js -->
 	<script src='js/SidebarNav.min.js' type='text/javascript'></script>
 	<!-- <script>
