--- a/public/index.html
+++ b/public/index.html
@@ -18,23 +18,23 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
 <!-- Bootstrap Core CSS -->
-<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+<link href="%PUBLIC_URL%/css/bootstrap.css" rel='stylesheet' type='text/css' />
 
 <!-- Custom CSS -->
-<link href="css/style.css" rel='stylesheet' type='text/css' />
-<link href="css/createprofileform.css" rel='stylesheet' type='text/css' />
+<link href="%PUBLIC_URL%/css/style.css" rel='stylesheet' type='text/css' />
+<link href="%PUBLIC_URL%/css/createprofileform.css" rel='stylesheet' type='text/css' />
 
 <!-- font-awesome icons CSS -->
-<link href="css/font-awesome.css" rel="stylesheet"> 
+<link href="%PUBLIC_URL%/css/font-awesome.css" rel="stylesheet"> 
 <!-- //font-awesome icons CSS -->
 
  <!-- side nav css file -->
- <link href='css/SidebarNav.min.css' media='all' rel='stylesheet' type='text/css'/>
+ <link href='%PUBLIC_URL%/css/SidebarNav.min.css' media='all' rel='stylesheet' type='text/css'/>
  <!-- side nav css file -->
  
  <!-- js-->
-<script src="js/jquery-1.11.1.min.js"></script>
-<script src="js/modernizr.custom.js"></script>
+<script src="%PUBLIC_URL%/js/jquery-1.11.1.min.js"></script>
+<script src="%PUBLIC_URL%/js/modernizr.custom.js"></script>
 
 <!--webfonts-->
 <link href="//fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
@@ -43,9 +43,9 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 <!--//webfonts--> 
 
 <!-- Metis Menu -->
-<script src="js/metisMenu.min.js"></script>
-<script src="js/custom.js"></script>
-<link href="css/custom.css" rel="stylesheet">
+<script src="%PUBLIC_URL%/js/metisMenu.min.js"></script>
+<script src="%PUBLIC_URL%/js/custom.js"></script>
+<link href="%PUBLIC_URL%/css/custom.css" rel="stylesheet">
 <!--//Metis Menu -->
 </head> 
 <body class="cbp-spmenu-push">
@@ -67,9 +67,9 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
     <div id="root"></div>
 	</div>
 	
-	<script src="js/paystack-inline.js"></script>
+	<script src="%PUBLIC_URL%/js/paystack-inline.js"></script>
 	<!-- side nav js -->
-	<script src='js/SidebarNav.min.js' type='text/javascript'></script>
+	<script src='%PUBLIC_URL%/js/SidebarNav.min.js' type='text/javascript'></script>
 	<!-- <script>
       $('.sidebar-menu').SidebarNav()
     </script> -->
@@ -77,12 +77,12 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 	
 	<!--scrolling js-->
 	<!-- <script src="js/jquery.nicescroll.js"></script> -->
-	<script src="js/scripts.js"></script>
+	<script src="%PUBLIC_URL%/js/scripts.js"></script>
 	<!--//scrolling js-->
 	
 	<!-- Bootstrap Core JavaScript -->
-   <script src="js/bootstrap.js"> </script>
-   <link rel="stylesheet" href="css/pikaday.css" />
+   <script src="%PUBLIC_URL%/js/bootstrap.js"> </script>
+   <link rel="stylesheet" href="%PUBLIC_URL%/css/pikaday.css" />
    <!-- <script src="js/pikaday.js"></script> -->
 </body>
 </html>
