Added logo to Nav Component

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 <!-- //font-awesome icons CSS -->
 
  <!-- side nav css file -->
- <link href='%PUBLIC_URL%/css/SidebarNav.min.css' media='all' rel='stylesheet' type='text/css'/>
+ <link href='%PUBLIC_URL%/css/sidebarNav.min.css' media='all' rel='stylesheet' type='text/css'/>
  <!-- side nav css file -->
  
  <!-- js-->
