Added Landing Page

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,11 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 <!-- Bootstrap Core CSS -->
 <link href="%PUBLIC_URL%/css/bootstrap.css" rel='stylesheet' type='text/css' />
 
+<!-- ANIMATE CSS -->
+<link href="%PUBLIC_URL%/css/animate2.css" rel='stylesheet' type='text/css' />
+
 <!-- Custom CSS -->
 <link href="%PUBLIC_URL%/css/style.css" rel='stylesheet' type='text/css' />
-<link href="%PUBLIC_URL%/css/createprofileform.css" rel='stylesheet' type='text/css' />
 
 <!-- font-awesome icons CSS -->
 <link href="%PUBLIC_URL%/css/font-awesome.css" rel="stylesheet"> 
@@ -47,25 +49,17 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 <script src="%PUBLIC_URL%/js/custom.js"></script>
 <link href="%PUBLIC_URL%/css/custom.css" rel="stylesheet">
 <!--//Metis Menu -->
+
+<script src="%PUBLIC_URL%/js/wow.min.js"></script>
+<script type="text/javascript" src="%PUBLIC_URL%/js/move-top.js"></script>
+<script type="text/javascript" src="%PUBLIC_URL%/js/easing.js"></script>
+<script src="%PUBLIC_URL%/js/responsiveslides.min.js"></script>
 </head> 
 <body class="cbp-spmenu-push">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-	<div class="main-content">
-	
-		<!--left-fixed -navigation-->
-		
-		<!-- header-starts -->
-		
-		<!-- //header-ends -->
-		<!-- main content start-->
-		
-		<!--footer-->
-		
-        <!--//footer-->
     <div id="root"></div>
-	</div>
 	
 	<script src="%PUBLIC_URL%/js/paystack-inline.js"></script>
 	<!-- side nav js -->
@@ -84,5 +78,50 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
    <script src="%PUBLIC_URL%/js/bootstrap.js"> </script>
    <link rel="stylesheet" href="%PUBLIC_URL%/css/pikaday.css" />
    <!-- <script src="js/pikaday.js"></script> -->
+
+   <style>
+	   .banner{
+			background:url(../images/bg.jpg) no-repeat 0px 0px;
+			background-size: cover;
+	   }
+
+	   .features-head h3, .pricing-text h3, .pricing-text-bottom h3, .contact-text h3{
+			background: url(../images/line.png) no-repeat 50% 100%;
+	   }
+
+	   .about-list ul li a span {
+			background: url(../images/icons1.png) no-repeat;
+	   }
+
+	   #toTop {
+			background: url(../images/easytop.png) no-repeat 0px 0px;
+	   }
+
+	   .device-text h3, .device-text-bottom h3{
+			background: url(../images/line.png) no-repeat 0% 100%;
+	   }
+
+	   .pricing{
+			background:url(../images/price.jpg) no-repeat;
+			position: relative;
+			background-size: cover;
+	   }
+
+	   .icon1{
+			background: url(../images/icons1.png) no-repeat -46px -14px;
+	   }
+
+	   .icon2{
+			background: url(../images/icons1.png) no-repeat -96px -14px;
+	   }
+
+	   .icon3{
+			background: url(../images/icons1.png) no-repeat -145px -14px;
+	   }
+
+	   .social span {
+			background: url(../images/social.png) no-repeat 0px 0px;
+	   }
+   </style>
 </body>
 </html>
