Images in style in public/index.html uses absolute links and no longer uses relative links

--- a/public/index.html
+++ b/public/index.html
@@ -81,46 +81,46 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 
    <style>
 	   .banner{
-			background:url(../images/bg.jpg) no-repeat 0px 0px;
+			background:url(%PUBLIC_URL%/images/bg.jpg) no-repeat 0px 0px;
 			background-size: cover;
 	   }
 
 	   .features-head h3, .pricing-text h3, .pricing-text-bottom h3, .contact-text h3{
-			background: url(../images/line.png) no-repeat 50% 100%;
+			background: url(%PUBLIC_URL%/images/line.png) no-repeat 50% 100%;
 	   }
 
 	   .about-list ul li a span {
-			background: url(../images/icons1.png) no-repeat;
+			background: url(%PUBLIC_URL%/images/icons1.png) no-repeat;
 	   }
 
 	   #toTop {
-			background: url(../images/easytop.png) no-repeat 0px 0px;
+			background: url(%PUBLIC_URL%/images/easytop.png) no-repeat 0px 0px;
 	   }
 
 	   .device-text h3, .device-text-bottom h3{
-			background: url(../images/line.png) no-repeat 0% 100%;
+			background: url(%PUBLIC_URL%/images/line.png) no-repeat 0% 100%;
 	   }
 
 	   .pricing{
-			background:url(../images/price.jpg) no-repeat;
+			background:url(%PUBLIC_URL%/images/price.jpg) no-repeat;
 			position: relative;
 			background-size: cover;
 	   }
 
 	   .icon1{
-			background: url(../images/icons1.png) no-repeat -46px -14px;
+			background: url(%PUBLIC_URL%/images/icons1.png) no-repeat -46px -14px;
 	   }
 
 	   .icon2{
-			background: url(../images/icons1.png) no-repeat -96px -14px;
+			background: url(%PUBLIC_URL%/images/icons1.png) no-repeat -96px -14px;
 	   }
 
 	   .icon3{
-			background: url(../images/icons1.png) no-repeat -145px -14px;
+			background: url(%PUBLIC_URL%/images/icons1.png) no-repeat -145px -14px;
 	   }
 
 	   .social span {
-			background: url(../images/social.png) no-repeat 0px 0px;
+			background: url(%PUBLIC_URL%/images/social.png) no-repeat 0px 0px;
 	   }
    </style>
 </body>
