Changed banner background image to stethoscope on a laptop image

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 
    <style>
 	   .banner{
-			background:url(%PUBLIC_URL%/images/bg.jpg) no-repeat 0px 0px;
+			background:url(%PUBLIC_URL%/images/bg.jpeg) no-repeat 0px 0px;
 			background-size: cover;
 	   }
 
